fixed misalignment of gameboard on mobile

--- a/src/gameboard/gameboard.css
+++ b/src/gameboard/gameboard.css
@@ -99,6 +99,8 @@
         width: 36px;
         height: 20px;
         font-size: 8px;
+        border: 1px solid #3d3428;
+        border-bottom: 3px solid #e6e51c;
     }
 
     .boss-attribute {
