--- a/src/key/key.css
+++ b/src/key/key.css
@@ -73,7 +73,7 @@
 
 .key-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     gap: 4px;
 }
 
@@ -98,8 +98,10 @@
     }
 
     .key {
-        width: 36px;
-        height: 36px;
+        width: 50px;
+        height: 50px;
         font-size: 10px;
+        border: 1px solid black;
+
     }
 }
